Fix docker-bench and add docker-bench-bootstrap which is required for Swarm
* All benchmark structs are from the proto
* docker-bench uses gRPC for callback (another commit will fix TLS)
* Remove dependency on docker/daemon which is just generally a headache

--- a/docker-bench/container/Dockerfile
+++ b/docker-bench/container/Dockerfile
@@ -3,8 +3,8 @@ MAINTAINER StackRox <support@stackrox.com>
 
 RUN printf "http://apk.rox.systems/v3.6/main\nhttp://apk.rox.systems/v3.6/community" > /etc/apk/repositories
 
-RUN apk update && apk add ca-certificates procps && apk --purge del apk-tools
-
+RUN apk update && apk add ca-certificates lvm2-dev btrfs-progs-dev procps && apk --purge del apk-tools
+#RUN apk update && apk add  alpine-sdk  && apk --purge del apk-tools
 ENV PATH=/
 
 COPY ./bin/docker-bench /docker-bench
