Refactor Docker Listener and Add Deployment bucket

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -1,13 +1,14 @@
 ROX_PROJECT=pkg
 TESTFLAGS=-race -p 4
 
-API_SERVICES = v1/image_rule_service
+API_SERVICES = v1/alert_service
 API_SERVICES += v1/benchmark_service
-API_SERVICES += v1/scanner_service
-API_SERVICES += v1/registry_service
-API_SERVICES += v1/alert_service
-API_SERVICES += v1/image_service
 API_SERVICES += v1/common
+API_SERVICES += v1/deployment_service
+API_SERVICES += v1/image_rule_service
+API_SERVICES += v1/image_service
+API_SERVICES += v1/registry_service
+API_SERVICES += v1/scanner_service
 
 GENERATED_SRCS = $(GENERATED_API_SRCS) $(GENERATED_API_GW_SRCS) $(GENERATED_API_VALIDATOR_SRCS)
 
