Add functionality to load default image policies.    Add Alert on Latest Tag Image Policy. Add Disabled and Description field to policies.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -7,6 +7,7 @@ RUN apk update && apk add ca-certificates procps && apk --purge del apk-tools
 
 ENV PATH=/apollo
 
+ADD ./policies /data/policies
 ADD ./bin/ /apollo/
 
 EXPOSE 8080
