AP-42: Move listener to a new Swarm agent; combine apollo+agent images
 - Add new 'agent/swarm' binary
 - Fix pkg build to not build api/; add AgentEventService
 - Add docker-compose
 - Add agent-events service
 - Build apollo and swarm-agent binaries into a single image
 - Move listener to specific agent binaries, not apollo
 - Use proto types directly; relocate common func to pkg

--- a/apollo/Makefile
+++ b/apollo/Makefile
@@ -4,7 +4,7 @@ TESTFLAGS=-race -p 4
 GENERATED_SRCS = $(GENERATED_API_SRCS)
 
 .PHONY: all
-all: style build test report image
+all: style build test report
 
 .PHONY: noimage
 noimage: style build test report
