--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-*/container/bin/*
-*/container/conf/*
-*/container/data/*
+**/container/bin/*
+**/container/conf/*
+**/container/data/*
 deps
 report.xml
 test.log
