--- a/apollo-ui/package.json
+++ b/apollo-ui/package.json
@@ -14,12 +14,13 @@
     "react-feather": "^1.0.7",
     "react-modal": "^3.1.7",
     "react-router-dom": "^4.2.2",
+    "react-feather": "^1.0.7",
     "react-scripts": "1.0.17",
-    "tailwindcss": "^0.2.2"
+    "tailwindcss": "^0.3.0"
   },
   "scripts": {
-    "start": "tailwind build ./src/index.tailwind.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src react-scripts start",
-    "build": "tailwind build ./src/index.tailwind.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src react-scripts build",
+    "start": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src react-scripts start",
+    "build": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
