AP-61: Use bazel and ship a single image for all Go programs
Binaries are now compiled using Bazel. Apollo, the Swarm Agent, Docker
Bench, and Docker Bench Bootstrap all land in the stackrox/apollo image.

Supporting changes:

 * Add name and stack namespace to docker-bench-bootstrap
 * Move build/ to make/ to avoid clashing with BUILD
 * Update to Alpine 3.7
 * Use timed-out context in pkg/docker.
 * Update Docker dependency to 17.09.
The github.com/docker/docker/reference package has been refactored
away to github.com/docker/distribution, so client code is also updated.
See https://github.com/moby/moby/commit/3a1279393faf78632bf169619d407e584da84b66
Version negotiation is handled by a new library function.

--- a/docker-bench-bootstrap/Makefile
+++ b/docker-bench-bootstrap/Makefile
@@ -1,18 +1,7 @@
 ROX_PROJECT=docker-bench-bootstrap
 TESTFLAGS=-race -p 1
 
-GENERATED_SRCS = $(GENERATED_API_SRCS)
-
 .PHONY: all
-all: style build test report image
+all: style build test report
 
-.PHONY: noimage
-noimage: style build test report
-
-.PHONY: preclean
-preclean:
-	@echo "+ $@"
-	@rm -rf container/bin
-
-include ../build/protogen.mk
-include ../build/apollo.mk
+include ../make/apollo.mk
