--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,9 +1,15 @@
-FROM alpine:3.6
+FROM alpine:3.7
 MAINTAINER StackRox <support@stackrox.com>
 
-RUN printf "http://apk.rox.systems/v3.6/main\nhttp://apk.rox.systems/v3.6/community" > /etc/apk/repositories
+RUN printf "http://apk.rox.systems/v3.7/main\nhttp://apk.rox.systems/v3.7/community" > /etc/apk/repositories
 
-RUN apk update && apk add ca-certificates procps && apk --purge del apk-tools
+RUN apk update && \
+    apk add \
+        ca-certificates \
+        procps \
+        && \
+    apk --purge del apk-tools \
+    ;
 
 ENV PATH=/apollo
 
