--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -11,10 +11,10 @@ API_SERVICES += v1/image_service
 API_SERVICES += v1/registry_service
 API_SERVICES += v1/scanner_service
 
-GENERATED_SRCS = $(GENERATED_API_SRCS) $(GENERATED_API_GW_SRCS) $(GENERATED_API_VALIDATOR_SRCS)
+GENERATED_SRCS = $(GENERATED_API_SRCS) $(GENERATED_API_GW_SRCS)
 
-include ../build/protogen.mk
-include ../build/apollo.mk
+include ../make/protogen.mk
+include ../make/apollo.mk
 
 .PHONY: all
 all: style build-pkg test report
@@ -22,18 +22,20 @@ all: style build-pkg test report
 .PHONY: preclean
 preclean:
 	@echo "+ $@"
-	@rm -rf serialization/generated
 	@rm -rf api/generated
 
 SUBDIRS := $(foreach dir, $(wildcard */.), $(if $(shell find $(dir) -name "*.go" -not -path "api/*"),$(dir),))
 
 .PHONY: build-pkg
-build-pkg: preclean $(GENERATED_SRCS) $(SUBDIRS)
+build-pkg: preclean generated-srcs
+	bazel run //:gazelle
+	bazel build --cpu=k8 \
+		//pkg/...
+
+.PHONY: generated-srcs
+generated-srcs: $(GENERATED_SRCS)
 
 .PHONY: $(SUBDIRS)
 $(SUBDIRS):
 	@echo "+ build $@"
 	@cd $@ && GOARCH=amd64 go build `glide novendor`
-
-# Unfortunately this must come after protogen.mk and stackrox.mk are imported.
-format-rules: $(GENERATED_SRCS)
