--- a/glide.yaml
+++ b/glide.yaml
@@ -4,11 +4,9 @@ ignore:
 - github.com/docker/docker/daemon
 import:
 - package: github.com/docker/docker
-  version: v17.03.2-ce
-- package: github.com/Sirupsen/logrus
+  version: 9b4a616e4b3819ef062780b5fd854616be2c22bb
+- package: github.com/sirupsen/logrus
   version: v1.0.3
-  repo: https://github.com/sirupsen/logrus.git
-  vcs: git
 - package: github.com/golang/protobuf
   version: 130e6b02ab059e7b717a096f397c5b60111cae74
 - package: github.com/grpc-ecosystem/grpc-gateway
@@ -17,8 +15,6 @@ import:
   version: f676e0f3ac6395ff1a529ae59a6670878a8371a6
 - package: github.com/grpc-ecosystem/go-grpc-middleware
   version: 6d3547c644afb325c16df96e3c7177ea6e2fdebd
-- package: github.com/mwitkow/go-proto-validators
-  version: a55ca57f374a8846924b030f534d8b8211508cf0
 - package: github.com/heroku/docker-registry-client
   version: fd2fe803496897db70c236ee244f41487ea92ec2
 - package: github.com/satori/go.uuid
@@ -33,11 +29,13 @@ import:
 - package: golang.org/x/net
   version: a337091b0525af65de94df2eb7e98bd9962dcbe2
 - package: github.com/docker/distribution
-  version: v2.6.2
+  version: edc3ab29cdff8694dd6feb85cfeb4b5f1b38ed9c
 - package: github.com/boltdb/bolt
   version: v1.3.1
 - package: github.com/hashicorp/golang-lru
   version: 0a025b7e63adc15a622f29b0b2c4c3848243bbf6
+- package: github.com/docker/go-connections
+  version: v0.3.0
 testImport:
 - package: github.com/stretchr/testify
   version: ^1.1.4
