--- a/glide.yaml
+++ b/glide.yaml
@@ -6,9 +6,9 @@ import:
 - package: github.com/docker/docker
   version: v17.03.2-ce
 - package: github.com/Sirupsen/logrus
+  version: v1.0.3
   repo: https://github.com/sirupsen/logrus.git
   vcs: git
-  version: v1.0.3
 - package: github.com/golang/protobuf
   version: 130e6b02ab059e7b717a096f397c5b60111cae74
 - package: github.com/grpc-ecosystem/grpc-gateway
@@ -26,8 +26,8 @@ import:
 - package: github.com/gogo/protobuf
   version: b79ae77db468f92c7ef48e12c9c5d70e6a20c3b8
   subpackages:
-    - proto
-    - protoc-gen-gogo/descriptor
+  - proto
+  - protoc-gen-gogo/descriptor
 - package: google.golang.org/grpc
   version: v1.7.2
 - package: golang.org/x/net
@@ -36,6 +36,8 @@ import:
   version: v2.6.2
 - package: github.com/boltdb/bolt
   version: v1.3.1
+- package: github.com/hashicorp/golang-lru
+  version: 0a025b7e63adc15a622f29b0b2c4c3848243bbf6
 testImport:
 - package: github.com/stretchr/testify
   version: ^1.1.4
