--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -3,8 +3,10 @@ TESTFLAGS=-race -p 4
 
 API_SERVICES  = v1/agent_event_service
 API_SERVICES += v1/alert_service
-API_SERVICES += v1/benchmark_service
 API_SERVICES += v1/benchmark_results_service
+API_SERVICES += v1/benchmark_schedule_service
+API_SERVICES += v1/benchmark_service
+API_SERVICES += v1/benchmark_trigger_service
 API_SERVICES += v1/cluster_service
 API_SERVICES += v1/common
 API_SERVICES += v1/configuration_policy
