--- a/apollo-ui/package.json
+++ b/apollo-ui/package.json
@@ -7,8 +7,12 @@
     "axios": "^0.17.1",
     "fbemitter": "^2.1.1",
     "flat": "^4.0.0",
+    "object-resolve-path": "^1.1.1",
+    "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-feather": "^1.0.7",
+    "react-modal": "^3.1.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "tailwindcss": "^0.2.2"
