AP-64: Add a CircleCI config that builds and pushes images
Add a CircleCI build config for Go images and the UI.

Some tests must be skipped in CircleCI currently (and they are).

CircleCI will push PR images with build-number tags and will
push "latest" and "ui-latest" on `master`.

A lint error in the UI is corrected.

--- a/docker-bench-bootstrap/Makefile
+++ b/docker-bench-bootstrap/Makefile
@@ -2,6 +2,6 @@ ROX_PROJECT=docker-bench-bootstrap
 TESTFLAGS=-race -p 1
 
 .PHONY: all
-all: style build test report
+all: style build
 
 include ../make/apollo.mk
