Improvement: Violations Page changes
* Added hover state to table rows
* Cleaned up filter terminology and gray out if there are no violations pertaining to that filter
* Added CIS docker benchmark, Swarm benchmark (disabled), and Kubernetes benchmark (disabled) tabs under Compliance
* Modify the policies table cell text (ie. LOW_SEVERITY -> Low)
* Time should be formatted

AP-49

--- a/apollo-ui/Makefile
+++ b/apollo-ui/Makefile
@@ -2,9 +2,8 @@
 all: deps test image
 
 .PHONY: image
-image: 
+image: build
 	@echo "+ $@"
-	yarn build
 	docker build -t stackrox/apollo-ui:latest .
 
 .PHONY: container
@@ -77,7 +76,7 @@ deps: package.json
 .PHONY: build
 build: deps
 	@echo "+ $@"
-	yarn build
+	HTTPS=true yarn build
 
 .PHONY: start
 start: deps
