--- a/apollo-ui/package.json
+++ b/apollo-ui/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.1.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-spinners": "^0.2.5",
     "tailwindcss": "^0.3.0"
   },
   "scripts": {
