AP-66: Add clusters API, including compose YAML for agents
Add lightweight tracking of clusters, which can be used to show the
customer a YAML for the agent.

--- a/apollo-ui/Makefile
+++ b/apollo-ui/Makefile
@@ -18,7 +18,7 @@ clean:
 	rm -rf node_modules
 	docker kill apollo-ui || true
 	docker rm apollo-ui || true
-	docker rmi stackrox/apollo-ui:latest || true
+	docker rmi stackrox/apollo:ui-latest || true
 
 UNAME_S := $(shell uname -s)
 ifeq ($(UNAME_S),Linux)
