--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -5,6 +5,7 @@ API_SERVICES  = v1/agent_event_service
 API_SERVICES += v1/alert_service
 API_SERVICES += v1/benchmark_service
 API_SERVICES += v1/benchmark_results_service
+API_SERVICES += v1/cluster_service
 API_SERVICES += v1/common
 API_SERVICES += v1/deployment_service
 API_SERVICES += v1/image_policy_service
