--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -14,4 +14,5 @@ RUN echo "deb [arch=amd64] http://storage.googleapis.com/bazel-apt stable jdk1.8
 RUN go get -u github.com/golang/lint/golint && \
     go get -u golang.org/x/tools/cmd/goimports && \
     go get -u github.com/jstemmer/go-junit-report && \
-    curl https://glide.sh/get | sh
+    curl -L -o $GOPATH/bin/dep https://github.com/golang/dep/releases/download/v0.3.2/dep-linux-amd64 && \
+    chmod +x $GOPATH/bin/dep
