AP-75: Use Bazel for testing
There is now a top-level `make test` target that runs all
tests using Bazel.

`style` is similarly moved to the top level.

docker-bench has various tests that fail on Mac; these are
hidden behind build flags.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,15 +14,7 @@ jobs:
       - checkout
       - setup_remote_docker
 
-      - run: make deps
-
-      - run: make -C pkg clean all
-      - run: make -C agent/swarm clean all
-      - run: make -C apollo clean all
-      - run: make -C docker-bench clean all
-      - run: make -C docker-bench-bootstrap clean all
-
-      - run: make image
+      - run: make all
 
       - run: docker tag stackrox/apollo:latest stackrox/apollo:$CIRCLE_SHA1
       - run: docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
