Use Airbnb's ESLint config to lint apollo-ui code. Fix existing violations.

--- a/apollo-ui/Makefile
+++ b/apollo-ui/Makefile
@@ -73,8 +73,13 @@ nodejs-ubuntu:
 deps: package.json
 	yarn install
 
+.PHONY: lint
+lint: deps
+	@echo "+ $@"
+	yarn lint
+
 .PHONY: build
-build: deps
+build: deps lint
 	@echo "+ $@"
 	yarn build
 
