AP-84: Add Kubernetes Listener
* Add Listener for kubernetes.
* Add deployment yaml that can be used to deploy apollo in a k8s cluster.

--- a/docker-compose-cluster.yaml
+++ b/docker-compose-cluster.yaml
@@ -40,7 +40,7 @@ services:
         constraints:
           - node.role==manager
     environment:
-      APOLLO_ENDPOINT: apollo.apollo_net:8080
+      ROX_APOLLO_ENDPOINT: apollo.apollo_net:8080
       ROX_APOLLO_CLUSTER_ID: test
       ROX_APOLLO_ADVERTISED_ENDPOINT: agent.apollo_net:8080
       DOCKER_CERT_PATH: /run/secrets/
