--- a/glide.yaml
+++ b/glide.yaml
@@ -4,7 +4,23 @@ ignore:
 - github.com/docker/docker/daemon
 import:
 - package: github.com/docker/docker
-  version: 9b4a616e4b3819ef062780b5fd854616be2c22bb
+  version: 7c9e64a2e1891bf1020d9312a18741c734fa1cd6
+  subpackages:
+  - api/types
+  - api/types/filters
+  - api/types/mount
+  - api/types/swarm
+  - client
+  - api
+  - errors
+  - pkg/authorization
+  - pkg/broadcaster
+  - pkg/ioutils
+  - pkg/plugins
+  - pkg/system
+  - pkg/version
+  - runconfig
+  - volume
 - package: github.com/sirupsen/logrus
   version: v1.0.3
 - package: github.com/golang/protobuf
@@ -27,7 +43,13 @@ import:
 - package: google.golang.org/grpc
   version: v1.7.2
 - package: golang.org/x/net
-  version: a337091b0525af65de94df2eb7e98bd9962dcbe2
+  version: dc871a5d77e227f5bbf6545176ef3eeebf87e76e
+- package: golang.org/x/sys
+  version: b8f5ef32195cae6470b728e8ca677f0dbed1a004
+  subpackages:
+  - unix
+- package: golang.org/x/text
+  version: 3b24cac7bc3a458991ab409aa2a339ac9e0d60d6
 - package: github.com/docker/distribution
   version: edc3ab29cdff8694dd6feb85cfeb4b5f1b38ed9c
 - package: github.com/boltdb/bolt
@@ -36,6 +58,10 @@ import:
   version: 0a025b7e63adc15a622f29b0b2c4c3848243bbf6
 - package: github.com/docker/go-connections
   version: v0.3.0
+- package: k8s.io/apimachinery
+  version: 85ace5365f33b16fc735c866a12e3c765b9700f2
+- package: k8s.io/client-go
+  version: ^v3.0.0
 testImport:
 - package: github.com/stretchr/testify
   version: ^1.1.4
