--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,5 +4,6 @@ load("@io_bazel_rules_go//go:def.bzl", "gazelle")
 gazelle(
     name = "gazelle",
     prefix = "bitbucket.org/stack-rox/apollo",
+    args = ["-build_file_name", "BUILD.bazel"],
     external = "vendored",
 )
