--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -67,9 +67,13 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
   version = "1.7.2"
 
 [[constraint]]
+  name = "k8s.io/api"
+  version = "kubernetes-1.9.0"
+
+[[constraint]]
   name = "k8s.io/apimachinery"
-  revision = "85ace5365f33b16fc735c866a12e3c765b9700f2"
+  version = "kubernetes-1.9.0"
 
 [[constraint]]
   name = "k8s.io/client-go"
-  version = "3.0.0"
+  version = "kubernetes-1.9.0"
