Combine various benchmark packages into pkg/benchmarks
Also, stop deleting protoc on every build, and update to 3.5.0.

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -41,6 +41,9 @@ build-pkg: preclean generated-srcs
 .PHONY: generated-srcs
 generated-srcs: $(GENERATED_SRCS)
 
+.PHONY: clean-generated-srcs
+clean-generated-srcs: clean-generated
+
 .PHONY: $(SUBDIRS)
 $(SUBDIRS):
 	@echo "+ build $@"
