--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,7 @@ services:
       - "ROX_APOLLO_ENDPOINT=apollo.apollo_net:8080"
       - "ROX_APOLLO_CLUSTER_ID=test"
       - "ROX_APOLLO_ADVERTISED_ENDPOINT=agent.apollo_net:8080"
+      - "ROX_APOLLO_IMAGE=stackrox/apollo:${APOLLO_IMAGE_TAG:-latest}"
 networks:
   net:
     driver: overlay
