--- a/apollo-ui/package.json
+++ b/apollo-ui/package.json
@@ -11,6 +11,7 @@
     "flat": "^4.0.0",
     "http-proxy-middleware": "^0.17.4",
     "object-resolve-path": "^1.1.1",
+    "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
