Improvement: Adding initial tests
* Fixed runtime errors for type checking
* Adding testing packages
* Adding initial tests

AP-110

--- a/apollo-ui/Makefile
+++ b/apollo-ui/Makefile
@@ -91,4 +91,9 @@ start: deps
 .PHONY: test
 test: deps
 	@echo "+ $@"
-	yarn test -- --coverage
+	yarn test
+
+.PHONY: test-watch
+test-watch: deps
+	@echo "+ $@"
+	yarn test-watch
