AP-98: Optionally complete image enrichment in Agents, not Central
Combine registry/scanner types and implementation registries, and move
to pkg.

Add scanner/registry client to agent; only enrich from there if
'clusters' is set.

Change scanners/registries to not connect immediately when created, only
when used. (This supports receiving them in Central before
distribution to Agents.)

Fix missing fields in scrubbed registries/scanners API output.

Fix leakage of Tenable secretKey due to case mismatch.

AP-115: Return deep copies from inmem store to avoid clients modifying the storage contents.

Add ROX_APOLLO_IMAGE to deployments.

--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -65,6 +65,8 @@ spec:
           value: apollo.stackrox:443
         - name: ROX_APOLLO_CLUSTER_ID
           value: test
+        - name: ROX_APOLLO_IMAGE
+          value: stackrox/apollo:latest
         imagePullPolicy: Always
         name: agent
         command:
