--- a/docker-compose-cluster.yaml
+++ b/docker-compose-cluster.yaml
@@ -34,6 +34,7 @@ services:
       ROX_APOLLO_ENDPOINT: apollo.apollo_net:443
       ROX_APOLLO_CLUSTER_ID: test
       ROX_APOLLO_ADVERTISED_ENDPOINT: agent.apollo_net:443
+      ROX_APOLLO_IMAGE: stackrox/apollo:${APOLLO_IMAGE_TAG:-latest}
       DOCKER_CERT_PATH: /run/secrets/
       DOCKER_HOST: ${DOCKER_HOST}
     secrets:
