AP-114: Refactor Policies and Add additional categories
* Add privilege & capabilities, and container configuration
  policies.
* Refactor policies to separate out metadata.
  Allow multiple categories per policy.
* Fix UI to accommodate policy API changes

Merged in AP-114-refactor-policies-and-add-privile (pull request #73)
Approved-by: Connor Gilbert <c@stackrox.com>

--- a/image/policies/BUILD.bazel
+++ b/image/policies/BUILD.bazel
@@ -11,6 +11,6 @@ go_library(
 
 filegroup(
     name = "fixtures",
-    srcs = glob(["image/*.json"]),
+    srcs = glob(["files/*.json"]),
     visibility = ["//visibility:public"],
 )
