AP-136 refactor processing of deployment
* Image enrichment is separated from policy matching.
* Each policy correctly perform matching for each category.
* Update default policies to use string values for enums.

Merged in AP-136-refactor-processing-of-deployment (pull request #78)
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/image/policies/files/nginx.json
+++ b/image/policies/files/nginx.json
@@ -1,8 +1,8 @@
 {
   "name": "DockerHub NGINX",
   "description": "Alert on deployments with nginx image from 'docker.io'",
-  "severity": 2,
-  "categories": [1],
+  "severity": "MEDIUM_SEVERITY",
+  "categories": ["IMAGE_ASSURANCE"],
   "image_policy": {
     "image_name": {
       "registry": "docker.io",
