--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -67,6 +67,14 @@ spec:
           value: test
         - name: ROX_APOLLO_IMAGE
           value: stackrox/apollo:latest
+        - name: ROX_APOLLO_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: ROX_APOLLO_SERVICE_ACCOUNT
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.serviceAccountName
         imagePullPolicy: Always
         name: agent
         command:
