AP-43: Add mutual TLS for Central and Sensors
Central is now launched with a CA key, which it uses to issue TLS
keypairs to itself and to Sensors/Agents. These keys are recorded as
"service identities" and can be provided to new Sensors.

This feature can be disabled in Central and in Sensors by setting
ROX_FEATURE_MTLS=false in the environment.

The Clusters API returns the created object, including deployment YAML,
in response to POST/PUT APIs, to avoid requiring an extra GET.

Add a README with cluster deployment instructions.

Merge mtls-cg (pull request #96)
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,28 @@
 **/container/bin/*
 **/container/conf/*
 **/container/data/*
-bazel-*
+
+# Crypto
+*.csr
+*.pem
+
+# Uncommitted code
+vendor/
+api/generated
+
+# Makefile cruft
 deps
 report.xml
 test.log
-vendor/
-api/generated
+protoc-*
+
+# Bazel
+bazel-*
+BUILD.bazel
+!/BUILD.bazel
+!/image/policies/BUILD.bazel-*
+
+# Miscellaneous
 *.g4
 *.tokens
-BUILD.bazel
 .idea/
-protoc-*
-pkg/api/generated
-glide.out
-
-!/BUILD.bazel
-!/image/policies/BUILD.bazel
