Rename visible UI elements: 'Apollo' -> 'Harden' In addition replace '@company.org' with '@example.com' in placeholders.
Merged in ivan/AP-170-apollo-to-harden (pull request #115)

--- a/apollo-ui/public/manifest.json
+++ b/apollo-ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Apollo UI",
-  "name": "Apollo UI",
+  "short_name": "StackRox Harden",
+  "name": "StackRox Harden",
   "icons": [
     {
       "src": "favicon.ico",
